fix horizontal overflow bug

--- a/src/components/person.module.scss
+++ b/src/components/person.module.scss
@@ -42,7 +42,7 @@
 }
 
 .cured {
-  background-color: #57c1ff;
+  background-color: #999999;
 }
 
 .infected {
