--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,4 +5,6 @@ body {
   font-family: "Roboto", sans-serif;
   /* background-color: #473638; */
   background-image: url("../images/brilliant.png");
+  width: 100vw;
+  max-width: 100%;
 }
